--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 Minerva is a programmer's text editor made in Qt. It is released under GPLv3.
+To build follow these steps:
+	$ qmake
+	$ make	
+	$ ./run.sh
+
+Edited with Minerva :)
